test: 공통 응답 클래스 적용에 따른 테스트코드 및 asciidoc 템플릿 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -43,14 +43,14 @@ sshplendid.github.io
 |===
 | field | 설명
 
-| `code`
-| 응답 코드
+| `status`
+| 응답 상태
 
 | `message`
-| 예외사항 내용 등 응답 메세지
+| 응답 메세지
 
 | `size`
-| `data`의 크기
+| data 의 크기
 
 | `data`
 | 실제 반환될 데이터
